include card html template

--- a/templates/courses/events_tag.html
+++ b/templates/courses/events_tag.html
@@ -48,85 +48,8 @@
         {% endfor %}
     </div>
     <div class="list-fullwidth">
-
         {% for event in events %}
-            <div class="media media-list-view mb-5">
-{#                {% if event.event_type == "COURSE" %} Mostrar imagen del evento #}
-{#                    <a class="media-img" href="{% url 'event_detail' %}">#}
-{#                    <img src= "https://www.tornadobitcoin.com/wp-content/uploads/2020/01/Untitled-design.png" alt="Image">#}
-{#                    <div class="media-img-overlay">#}
-        {#                <span class="badge badge-success badge-rounded-circle">$50</span>#}
-{#                    </div>#}
-{#                    </a>#}
-{#                {% endif %}#}
-                <div class="media-body">
-                    <h3 class="mb-3 mb-lg-2 mb-xl-3">
-                        {% if event.event_type == "COURSE" %}
-{#                            lo que cambia es el color del title#}
-                            <a class="text-info text-capitalize font-weight-bold" href="{% url 'event_detail' event.id %}">
-                            {{ event.title }}</a>
-                        {% elif event.event_type == "EVENT" %}
-                            <a class="text-success text-capitalize font-weight-bold" href="{% url 'event_detail' event.id %}">
-                            {{ event.title }}</a>
-                        {% endif %}
-                    </h3>
-
-                    <ul class="list-unstyled d-flex text-muted mb-2">
-                        <li class="mr-3">
-                            <i class="fa fa-user-circle-o mr-2" aria-hidden="true"></i> {{ event.owner.username }}
-                        </li>
-                        <li class="mr-3">
-                            {% if event.event_type == "COURSE" %}
-                                {% if event.is_recorded %}
-                                    <i class="fa fa-play-circle mr-2" aria-hidden="true"></i>Curso Grabado
-                                {% else %}
-                                    <i class="fa fa-video-camera mr-2" aria-hidden="true"></i>Curso en Línea
-                                {% endif %}
-                            {% elif event.event_type == "EVENT" %}
-                                {% if event.is_recurrent %}
-                                    <i class="fa fa-calendar mr-2" aria-hidden="true"></i>Evento Recurrente
-                                {% else %}
-                                    <i class="fa fa-tag mr-2" aria-hidden="true"></i>Evento
-                                {% endif %}
-                            {% endif %}
-                        </li>
-                        <li>
-                            {% if event.is_recorded %}
-                                {% if event.is_recorded %}
-                                    <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                    {{ event.date_recorded|date:"SHORT_DATE_FORMAT" }}
-                                {% endif %}
-                            {% elif event.is_recurrent %}
-                                {% if event.schedule_description %}
-                                    <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                    {{ event.schedule_description }}
-                                {% endif %}
-                            {% else %}
-                                {% if event.date_start %}
-                                    <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                    {{ event.date_start|date:"SHORT_DATE_FORMAT" }}
-                                {% endif %}
-                                {% if event.date_end %}
-                                    - {{ event.date_end|date:"SHORT_DATE_FORMAT" }}
-                                {% endif %}
-                            {% endif %}
-                        </li>
-                    </ul>
-
-{#                    <p class="text-justify mb-lg-2">#}
-{#                        {{ event.description | safe }}#}
-{#                    </p>#}
-
-{#                    <div class="">#}
-{#                        <a href="" class="btn btn-sm btn-white text-uppercase mb-1 mr-4 btn-hover-success">#}
-{#                            <i class="fa fa-star mr-2" aria-hidden="true"></i>Guardar#}
-{#                        </a>#}
-{#                        <a class="btn btn-link text-hover-success text-underline pl-0" href="}">#}
-{#                            <i class="fa fa-angle-double-right mr-1" aria-hidden="true"></i> Leer más#}
-{#                        </a>#}
-{#                    </div>#}
-                </div>
-            </div>
+            {% include 'courses/event_card.html' with event=event %}
         {% endfor %}
     </div>
     <div class="text-sm-right mt-6">
