--- a/templates/courses/events_all.html
+++ b/templates/courses/events_all.html
@@ -35,7 +35,7 @@
 						<i class="fa fa-search text-muted font-size-18" aria-hidden="true"></i>
 					</span>
 				</div>
-				<input type="text" class="form-control bg-light border-0 form-control-lg" aria-label="Amount (to the nearest dollar)"
+				<input type="text" class="form-control bg-light border-0 form-control-lg" name="q"
 				 placeholder="Cursos / Eventos / Exámenes">
                 <div class="input-group-append">
 					<button type="submit" class="btn shadow-none btn-lg btn-info text-uppercase">Buscar</button>
@@ -57,70 +57,8 @@
         {% endfor %}
     </div>
     <div class="row wow" style="visibility: visible">
-
-{% for event in events %}
-          <div class="col-sm-6 col-lg-3 col-xs-12">
-            <div class="card">
-              <a href="course-single-left-sidebar.html" class="position-relative">
-                  {% if event.image %}
-                    <img class="card-img-top" src="{{ event.image.url }}" alt="Card image">
-                  {% else %}
-                    <img class="card-img-top" src="https://picsum.photos/500" alt="Event Image">
-                  {% endif %}
-                <div class="card-img-overlay">
-                  <span class="badge badge-warning badge-rounded-circle">$50</span>
-                </div>
-              </a>
-              <div class="card-body border-top-5 px-3 border-warning">
-                <h3 class="card-title">
-                  <a class="text-warning text-capitalize d-block" href="course-single-left-sidebar.html">{{ event.title }}</a>
-                </h3>
-                <ul class="list-unstyled text-muted">
-                  <li class="mb-1">
-                    <i class="fa fa-user-circle-o mr-2" aria-hidden="true"></i>{{ event.owner.username }}
-                  </li>
-                    <li class="mb-1">
-                        {% if event.is_recorded %}
-                            {% if event.is_recorded %}
-                                <span title="Fecha de Grabación">
-                                    <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                    {{ event.date_recorded|date:"SHORT_DATE_FORMAT" }}
-                                </span>
-                            {% endif %}
-                        {% elif event.is_recurrent %}
-                            {% if event.schedule_description %}
-                                <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                {{ event.schedule_description }}
-                            {% endif %}
-                        {% else %}
-                            {% if event.date_start %}
-                                <i class="fa fa-clock-o mr-2" aria-hidden="true"></i>
-                                {{ event.date_start|date:"SHORT_DATE_FORMAT" }}
-                            {% endif %}
-                            {% if event.date_end %}
-                                - {{ event.date_end|date:"SHORT_DATE_FORMAT" }}
-                            {% endif %}
-                        {% endif %}
-                    </li>
-                    <li class="mr-3">
-                        {% if event.event_type == "COURSE" %}
-                            {% if event.is_recorded %}
-                                <i class="fa fa-play-circle mr-2" aria-hidden="true"></i>Curso Pre Grabado
-                            {% else %}
-                                <i class="fa fa-video-camera mr-2" aria-hidden="true"></i>Curso en Vivo
-                            {% endif %}
-                        {% elif event.event_type == "EVENT" %}
-                            {% if event.is_recurrent %}
-                                <i class="fa fa-calendar mr-2" aria-hidden="true"></i>Evento Recurrente
-                            {% else %}
-                                <i class="fa fa-tag mr-2" aria-hidden="true"></i>Evento
-                            {% endif %}
-                        {% endif %}
-                    </li>
-                </ul>
-              </div>
-            </div>
-          </div>
+        {% for event in events %}
+            {% include 'courses/event_card.html' with event=event %}
         {% endfor %}
     </div>
 </div>
