event card include pattern html

--- a/templates/courses/events_result.html
+++ b/templates/courses/events_result.html
@@ -4,6 +4,30 @@
 <!-- ====================================
 ———	BREADCRUMB
 ===================================== -->
+  <section class="breadcrumb-bg" style="background-image: url('https://www.processmaker.com/wp-content/uploads/2020/01/blockchain-technology-digital-code-chain_99236-110.jpg');">
+    <div class="container">
+      <div class="breadcrumb-holder">
+        <div>
+          <h1 class="breadcrumb-title"> Utiliza criptomonedas para aprender y gana compartiendo conocimiento. </h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<section class="pt-7 pb-7 pt-md-10">
+    <div class="container">
+        <div class="text-sm-right mt-6">
+          <button type="submit" class="btn btn-warning text-uppercase"
+                  onclick="location.href = '{% url 'event_create' %}' ">
+            Crear Nuevo Curso
+          </button>
+        </div>
+    </div>
+
+    <div class="container">
+        <h2 class="text-capitalize text-muted font-weight-bold mb-0"> "{{ query }}": </h2>
+    </div>
+</section>
 
 <section class="pb-md-10 pb-6">
 <div class=" container">
