--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -73,7 +73,7 @@
             Editar Perfil
           </button>
           <button id="edit_cryptos" type="submit" class="btn btn-info text-uppercase">
-            Criptos Preferidas
+            Criptos
           </button>
           <button id="edit_contact" type="submit" class="btn btn-success text-uppercase">
             Métodos de Contacto
