bitcoinjs para validacion

--- a/templates/courses/events.html
+++ b/templates/courses/events.html
@@ -36,7 +36,7 @@
           data-basealign="grid"
           data-responsive_offset="off"
           style="z-index: 1;">
-            <span class="breadcrumb-title">Accede a Educacion sin Intermediarios. </span>
+            <span class="breadcrumb-title">Accede a Educacion sin Intermediarios!! </span>
         </div>
 
         <!-- LAYER NR. 2 -->
