--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -1,7 +1,7 @@
 {% extends 'profiles/profile_base.html' %}
+{% load static %}
 
 {% block profile_content %}
-
 <!-- ====================================
 ———	BLOG GRID LEFT SIDEBAR
 ===================================== -->
@@ -40,7 +40,7 @@
                                   <i class="fa fa-check"></i></button>
                             </div>
                           </div>
-                          <input type="text" class="form-control" id="crypto_address_{{ forloop.counter }}"
+                          <input type="text" class="form-control address" id="crypto_address_{{ forloop.counter }}"
                                     placeholder="Opcional. Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
                             <hr>
                         </div>
@@ -57,6 +57,7 @@
 
 
 {% block extra_js %}
+    <script src="{% static 'assets/js/bitcoinjs/src/address.js' %}"></script>
     <script>
     $( document ).ready(function() {
         $(".hidden").hide()
@@ -145,7 +146,11 @@
                         console.log(response);
                     }
                 });
-        })
+        });
+
+        $("#crypto_method_wrapper").on("focusout", ".address", function(){
+            console.log("FOCUSOUT!");
+        });
 
         $("#new_crypto_method").on("click", function(){
             counter += 1;
@@ -170,6 +175,8 @@
             );
             console.log("counter: " + counter)
         });
+
+
     });
     </script>
 {% endblock extra_js %}
