--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -69,12 +69,13 @@
                   {% csrf_token %}
                 <div class="modal-body">
                       <div class="input-group mb-3">
-                        <input name="crypto_id" type="hidden" value="" class="hidden">
-                        <input id="modal_crypto_name" type="text" class="form-control" value="" placeholder="Nombre">
-                        <input id="modal_crypto_code" type="text" class="form-control crypto_code" onkeyup="this.value = this.value.toUpperCase();"
+                        <input name="crypto_id" id="modal_crypto_name" type="hidden" value="0" class="hidden">
+                        <input name="crypto_name" id="modal_crypto_name" type="text" class="form-control" value="" placeholder="Nombre">
+                        <input name="crypto_code" id="modal_crypto_code" type="text" class="form-control crypto_code"
+                               onkeyup="this.value = this.value.toUpperCase();"
                                value="" placeholder="Código">
                       </div>
-                      <input id="modal_crypto_address" type="text" class="form-control"
+                      <input id="modal_crypto_address" type="text" class="form-control" name="crypto_address"
                                 placeholder="Recomendado. Dirección de tu billetera (copia y pégala aquí)" value="">
                 </div>
                 <div class="modal-footer">
@@ -110,7 +111,7 @@
             };
             console.log(data);
             $.ajax({
-                url: "{% url 'profile_delete_crypto' 0 %}".replace("0", crypto_id),
+                url: "{% url 'profile_delete_crypto' %}",
                 method: "post",
                 data: data,
                 success: function(response){
@@ -123,6 +124,27 @@
                 }
             });
         });
+
+        $("#crypto_method_wrapper").on("click", ".edit", function(){
+            let crypto_id = $(this).data("id");
+            console.log("crypto ID");
+            console.log(crypto_id);
+
+            let item_div = $("#input_wrapper_"+crypto_id);
+            let crypto_name = item_div.find("#modal_crypto_name").val();
+            console.log("crypto_name");
+            console.log(crypto_name);
+
+            let crypto_code = item_div.find("#modal_crypto_code").val();
+            console.log("crypto_code");
+            console.log(crypto_code);
+
+            let crypto_address = item_div.find("#modal_crypto_address").val();
+            console.log("crypto_address");
+            console.log(crypto_address);
+
+            $("#modal_crypto_name").val()
+        })
 
         $("#save_crypto_form").on("click", function(){
             console.log("submit!");
