--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -26,7 +26,7 @@
                         <div class="crypto_input_wrapper" id="input_wrapper_{{ c.id }}">
                           <div class="input-group mb-3">
                             <input type="hidden" value="{{ c.id }}" class="hidden">
-                            <input type="text" class="form-control" disabled value="{{ c.crypto.name }}" placeholder="Nombre">
+                            <input type="text" class="form-control crypto_name" disabled value="{{ c.crypto.name }}" placeholder="Nombre">
                             <input type="text" class="form-control crypto_code" disabled onkeyup="this.value = this.value.toUpperCase();"
                                    value="{{ c.crypto.code }}" placeholder="Código">
                             <div class="input-group-append">
@@ -42,8 +42,8 @@
                               </button>
                             </div>
                           </div>
-                          <input type="text" class="form-control" disabled
-                                    placeholder="Opcional. Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
+                          <input type="text" class="form-control crypto_address" disabled
+                                    placeholder="Recomendado. Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
                             <hr>
                         </div>
                     {% endfor %}
@@ -69,11 +69,10 @@
                   {% csrf_token %}
                 <div class="modal-body">
                       <div class="input-group mb-3">
-                        <input name="crypto_id" id="modal_crypto_name" type="hidden" value="0" class="hidden">
-                        <input name="crypto_name" id="modal_crypto_name" type="text" class="form-control" value="" placeholder="Nombre">
-                        <input name="crypto_code" id="modal_crypto_code" type="text" class="form-control crypto_code"
-                               onkeyup="this.value = this.value.toUpperCase();"
-                               value="" placeholder="Código">
+                        <input name="crypto_id" id="modal_crypto_id" type="hidden" value="0" class="hidden">
+                        <input name="crypto_name" id="modal_crypto_name" type="text" class="form-control" placeholder="Nombre">
+                        <input name="crypto_code" id="modal_crypto_code" type="text" class="form-control" placeholder="Código"
+                               onkeyup="this.value = this.value.toUpperCase();">
                       </div>
                       <input id="modal_crypto_address" type="text" class="form-control" name="crypto_address"
                                 placeholder="Recomendado. Dirección de tu billetera (copia y pégala aquí)" value="">
@@ -127,23 +126,27 @@
 
         $("#crypto_method_wrapper").on("click", ".edit", function(){
             let crypto_id = $(this).data("id");
+            let item_div = $("#input_wrapper_"+crypto_id);
             console.log("crypto ID");
             console.log(crypto_id);
 
-            let item_div = $("#input_wrapper_"+crypto_id);
-            let crypto_name = item_div.find("#modal_crypto_name").val();
+            let crypto_name = item_div.find(".crypto_name").val();
             console.log("crypto_name");
             console.log(crypto_name);
 
-            let crypto_code = item_div.find("#modal_crypto_code").val();
+            let crypto_code = item_div.find(".crypto_code").val();
             console.log("crypto_code");
             console.log(crypto_code);
 
-            let crypto_address = item_div.find("#modal_crypto_address").val();
+            let crypto_address = item_div.find(".crypto_address").val();
             console.log("crypto_address");
             console.log(crypto_address);
 
-            $("#modal_crypto_name").val()
+            $("#modal_crypto_id").val(crypto_id);
+            $("#modal_crypto_name").val(crypto_name);
+            $("#modal_crypto_code").val(crypto_code);
+            $("#modal_crypto_address").val(crypto_address);
+            $("#modalAddCrypto").modal("show");
         })
 
         $("#save_crypto_form").on("click", function(){
