new contact method frontend

--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -193,7 +193,7 @@
            window.location.href = "{% url 'profile_edit_cryptos' %}";
         });
         $("#edit_contact").on("click", function(){
-           window.location.href = "{% url 'profile_edit_contact' %}";
+           window.location.href = "{% url 'profile_edit_contactm' %}";
         });
 
         // timezone en form. Selecciona el timezone del usuario
