--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -150,7 +150,7 @@
         })
 
         $("#new_preferred_crypto").on("click", function(){
-            $("#modal_crypto_id").val("");
+            $("#modal_crypto_id").val("0");
             $("#modal_crypto_name").val("");
             $("#modal_crypto_code").val("");
             $("#modal_crypto_address").val("");
